docs: update docs

--- a/07-closure-deco.ipynb
+++ b/07-closure-deco.ipynb
@@ -39,29 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running wrapped()\n",
-      "Running wrapped()\n",
-      "running iner()\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.deco.<locals>.inner()>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 装饰器通常会把函数替换成另一个函数\n",
     "def decorate(func):\n",
@@ -106,21 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "running register <function f1 at 0x106ec78c0>\n",
-      "running register <function f2 at 0x106ec7b90>\n",
-      "running main()\n",
-      "registry -> [<function f1 at 0x106ec78c0>, <function f2 at 0x106ec7b90>]\n",
-      "running f1()\n",
-      "running f2()\n",
-      "running f3()\n"
-     ]
+     "name": "stdout",
+     "text": "running register <function f1 at 0x111b6fee0>\nrunning register <function f2 at 0x111bdb160>\nrunning main()\nregistry -> [<function f1 at 0x111b6fee0>, <function f2 at 0x111bdb160>]\nrunning f1()\nrunning f2()\nrunning f3()\n"
     }
    ],
    "source": [
@@ -169,8 +143,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "通过上面的例子，强调装饰器函数在导入模块式立即执行，而普通函数在被调用时运行。导入时和运行时的区别。\n",
     "\n",
@@ -191,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,31 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "6\n",
-      "3\n"
-     ]
-    },
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'b' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-8d80b8f9ed34>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mf2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-13-8d80b8f9ed34>\u001b[0m in \u001b[0;36mf2\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mf2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mf2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'b' referenced before assignment"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 比较两个例子\n",
     "\n",
@@ -269,18 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def f3(a):\n",
     "    global b\n",
@@ -303,20 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[10, 11, 12]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Averager():\n",
     "    def __init__(self):\n",
@@ -377,22 +311,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'count' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-28c4c6732167>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mavg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmake_averager\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mavg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-31-28c4c6732167>\u001b[0m in \u001b[0;36maverager\u001b[0;34m(new_value)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0maverager\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_value\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mtotal\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mnew_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mtotal\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'count' referenced before assignment"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def make_averager():\n",
     "    count = 0\n",
@@ -422,20 +343,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10.0"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def make_averager():\n",
     "    count = 0\n",
@@ -462,27 +372,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**************************************** Calling snooze(.123)\n",
-      "[0.12814586s] snooze(0.123) -> None\n",
-      "**************************************** Calling factorial(6)\n",
-      "clocked\n",
-      "[0.00000055s] factorial(1) -> 1\n",
-      "[0.00003427s] factorial(2) -> 2\n",
-      "[0.00005653s] factorial(3) -> 6\n",
-      "[0.00014003s] factorial(4) -> 24\n",
-      "[0.00017823s] factorial(5) -> 120\n",
-      "[0.00020687s] factorial(6) -> 720\n",
-      "6! = 720\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "\n",
@@ -521,20 +413,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'clocked'"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "factorial.__name__"
    ]
@@ -550,26 +431,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**************************************** Calling snooze(.123)\n",
-      "0.12688595399959013\n",
-      "**************************************** Calling factorial(6)\n",
-      "[0.00000080s] factorial(1) -> 1\n",
-      "[0.00004373s] factorial(2) -> 2\n",
-      "[0.00006725s] factorial(3) -> 6\n",
-      "[0.00009852s] factorial(4) -> 24\n",
-      "[0.00012402s] factorial(5) -> 120\n",
-      "[0.00014628s] factorial(6) -> 720\n",
-      "6! = 720\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "import functools\n",
@@ -612,50 +476,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.00000042s] fibonacci() -> 0\n",
-      "[0.00000043s] fibonacci() -> 1\n",
-      "[0.00007592s] fibonacci() -> 1\n",
-      "[0.00000047s] fibonacci() -> 1\n",
-      "[0.00000044s] fibonacci() -> 0\n",
-      "[0.00000032s] fibonacci() -> 1\n",
-      "[0.00003785s] fibonacci() -> 1\n",
-      "[0.00009070s] fibonacci() -> 2\n",
-      "[0.00022295s] fibonacci() -> 3\n",
-      "[0.00000024s] fibonacci() -> 1\n",
-      "[0.00000025s] fibonacci() -> 0\n",
-      "[0.00000027s] fibonacci() -> 1\n",
-      "[0.00002246s] fibonacci() -> 1\n",
-      "[0.00006504s] fibonacci() -> 2\n",
-      "[0.00000034s] fibonacci() -> 0\n",
-      "[0.00000037s] fibonacci() -> 1\n",
-      "[0.00024465s] fibonacci() -> 1\n",
-      "[0.00000044s] fibonacci() -> 1\n",
-      "[0.00000040s] fibonacci() -> 0\n",
-      "[0.00000041s] fibonacci() -> 1\n",
-      "[0.00007037s] fibonacci() -> 1\n",
-      "[0.00013243s] fibonacci() -> 2\n",
-      "[0.00043718s] fibonacci() -> 3\n",
-      "[0.00055506s] fibonacci() -> 5\n",
-      "[0.00081003s] fibonacci() -> 8\n",
-      "8\n",
-      "[0.00000031s] fibonacci() -> 0\n",
-      "[0.00000042s] fibonacci() -> 1\n",
-      "[0.00003831s] fibonacci() -> 1\n",
-      "[0.00000061s] fibonacci() -> 2\n",
-      "[0.00006721s] fibonacci() -> 3\n",
-      "[0.00000049s] fibonacci() -> 5\n",
-      "[0.00009473s] fibonacci() -> 8\n",
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@clock\n",
     "def fibonacci(n):\n",
@@ -692,21 +515,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<ul>\n",
-      "<li><p>alpha</p></li>\n",
-      "<li><pre>66 (0x42)</pre></li>\n",
-      "<li><pre>{1, 2, 3}</pre></li>\n",
-      "<ul>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 生成 HTML 显示不同类型的 python 对象\n",
     "import html\n",
@@ -764,7 +575,8 @@
     "\n",
     "\n",
     "\n",
-    "### 叠放装饰器\n",
+    "## 叠放装饰器\n",
+    "\n",
     "```python\n",
     "@d1\n",
     "@d2\n",
@@ -786,111 +598,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 参数化装饰器\n",
-    "def counter(start=1):\n",
-    "    def decorator(func):\n",
-    "        n = start\n",
-    "        def wrapped(*args, **kwargs):\n",
-    "            nonlocal n\n",
-    "            print(f'{func.__name__} called {n} times.')\n",
-    "            n += 1\n",
-    "            return func(*args, **kwargs)\n",
-    "        return wrapped\n",
-    "    return decorator\n",
+    "# 参数化的注册装饰器\n",
+    "registry = set()\n",
     "\n",
-    "def test():\n",
-    "    return\n",
+    "# 这是一个工厂函数，用来构建装饰器函数\n",
+    "def register(active=True):\n",
+    "    # decorate 是真正的装饰器\n",
+    "    def decorate(func):\n",
+    "        print('running register(active=%s)->decorate(%s)' % (active, func))\n",
+    "        if active:\n",
+    "            registry.add(func)\n",
+    "        else:\n",
+    "            registry.discard(func) \n",
+    "        return func\n",
+    "    return decorate\n",
     "\n",
-    "t1 = counter(start=1)(test)\n",
-    "t1()\n",
-    "t1()\n",
-    "\n",
-    "@counter(start=2)\n",
-    "def t2():\n",
-    "    return\n",
-    "\n",
-    "t2()\n",
-    "t2()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "t3 called 1 times.\n",
-      "t3 called 2 times.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# （可能是）更简洁的装饰器实现方式\n",
-    "# 利用 class.__call__\n",
-    "\n",
-    "class counter:\n",
-    "    def __init__(self, func):\n",
-    "        self.n = 1\n",
-    "        self.func = func\n",
-    "\n",
-    "    def __call__(self, *args, **kwargs):\n",
-    "        print(f'{self.func.__name__} called {self.n} times.')\n",
-    "        self.n += 1\n",
-    "        return self.func(*args, **kwargs)\n",
-    "\n",
-    "@counter\n",
-    "def t3():\n",
-    "    return\n",
-    "\n",
-    "t3()\n",
-    "t3()"
+    "@register(active=False)\n",
+    "def f1():\n",
+    "    print('running f1()')\n",
+    "    \n",
+    "@register()\n",
+    "def f2():\n",
+    "    print('running f2()')\n",
+    "    \n",
+    "def f3():\n",
+    "    print('running f3()')\n",
+    "    \n",
+    "f1()\n",
+    "f2()\n",
+    "f3()\n",
+    "register()(f3)\n",
+    "registry\n",
+    "register(active=False)(f2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "推荐阅读：[decorator 第三方库](http://decorator.readthedocs.io/en/latest/)"
+    "## 参数化 clock 装饰器\n",
+    "\n",
+    "为 clock 装饰器添加一个功能，让用户传入一个格式化字符串，控制被装饰函数的输出。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f called 1 times.\n",
-      "2\n",
-      "f called 2 times.\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from decorator import decorator\n",
+    "import time\n",
     "\n",
-    "@decorator\n",
-    "def counter(func, *args, **kwargs):\n",
-    "    if not hasattr(func, 'n'):\n",
-    "        func.n = 1\n",
-    "    print(f'{func.__qualname__} called {func.n} times.')\n",
-    "    retval = func(*args, **kwargs)\n",
-    "    func.n += 1\n",
-    "    return retval\n",
+    "DEFAULT_FMT = '[{elapsed:0.8f}s] {name}({args}) -> {result}'\n",
     "\n",
+    "def clock(fmt=DEFAULT_FMT):\n",
+    "    def decorate(func):\n",
+    "        def clocked(*_args):\n",
+    "            t0 = time.time()\n",
+    "            _result = func(*_args)\n",
+    "            elapsed = time.time() - t0\n",
+    "            name = func.__name__\n",
+    "            args = ', '.join(repr(arg) for arg in _args)\n",
+    "            result = repr(_result)\n",
+    "            print(fmt.format(**locals()))\n",
+    "            return _result\n",
+    "        return clocked\n",
+    "    return decorate\n",
     "\n",
-    "@counter\n",
-    "def f(n):\n",
-    "    return n\n",
+    "# @clock()\n",
+    "# @clock('{name}: {elapsed}s')\n",
+    "@clock('{name}{args} dt={elapsed:0.3f}s')\n",
+    "def snooze(seconds):\n",
+    "    time.sleep(seconds)\n",
     "\n",
-    "print(f(2))\n",
-    "print(f(3))"
+    "for i in range(3):\n",
+    "    snooze(.123)"
    ]
   }
  ],
