--- a/11-iface-abc.ipynb
+++ b/11-iface-abc.ipynb
@@ -5,10 +5,13 @@
    "metadata": {},
    "source": [
     "# 接口：从协议到抽象基类\n",
+    "\n",
     "> 抽象类表示接口。  \n",
     "> ——Bjarne Stroustrup, C++ 之父\n",
     "\n",
-    "本章讨论的话题是接口：从**鸭子类型**的代表特征动态协议，到使接口更明确、能验证实现是否符合规定的抽象基类（Abstract Base Class, ABC）。\n",
+    "本章讨论的话题是接口：\n",
+    "\n",
+    "从**鸭子类型**的代表特征动态协议，到使接口更明确、能验证实现是否符合规定的抽象基类（Abstract Base Class, ABC）。\n",
     "\n",
     "> 接口的定义：对象公开方法的子集，让对象在系统中扮演特定的角色。  \n",
     "> 协议是接口，但不是正式的（只由文档和约定定义），因此协议不能像正式接口那样施加限制。  \n",
@@ -19,18 +22,129 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 抽象基类（abc）\n",
-    "抽象基类是一个非常实用的功能，可以使用抽象基类来检测某个类是否实现了某种协议，而这个类并不需要继承自这个抽象类。  \n",
-    "[`collections.abc`](https://docs.python.org/3/library/collections.abc.html) 和 [`numbers`](https://docs.python.org/3/library/numbers.html) 模块中提供了许多常用的抽象基类以用于这种检测。\n",
+    "## 接口与协议\n",
     "\n",
-    "有了这个功能，我们在自己实现函数时，就不需要非常关心外面传进来的参数的**具体类型**（`isinstance(param, list)`），只需要关注这个参数是否支持我们**需要的协议**（`isinstance(param, abc.Sequence`）以保障正常使用就可以了。\n",
+    "- 什么是接口\n",
+    "    \n",
+    "    对象公开方法的子集，让对象在系统中扮演特定的角色。\n",
+    "    \n",
+    "- 鸭子类型与动态协议\n",
     "\n",
-    "但是注意：从 Python 简洁性考虑，最好不要自己创建新的抽象基类，而应尽量考虑使用现有的抽象基类。"
+    "- 受保护的类型与私有类型不能在接口中\n",
+    "\n",
+    "- 可以把公开的数据属性放在接口中"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 案例：通过实现 __getitem__ 方法支持序列操作 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Foo:\n",
+    "    def __getitem__(self, pos):\n",
+    "        return range(0, 30, 10)[pos]\n",
+    "    \n",
+    "f = Foo()\n",
+    "print(f[1])\n",
+    "\n",
+    "for i in f:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Foo 实现了序列协议的 `__getitem__` 方法。因此可支持下标操作。\n",
+    "\n",
+    "Foo 实例是可迭代的对象，因此可以使用 in 操作符"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 案例：在运行时实现协议——猴子补丁\n",
+    "\n",
+    "FrenchDeck 类见前面章节。\n",
+    "\n",
+    "FrenchDeck 实例的行为像序列，那么其实可以用 random 的 `shuffle` 方法来代替在类中实现的方法。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import shuffle\n",
+    "from frenchdeck import FrenchDeck\n",
+    "\n",
+    "deck = FrenchDeck()\n",
+    "shuffle(deck)\n",
+    "# TypeError: 'FrenchDeck' object does not support item assigment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FrenchDeck 对象不支持元素赋值。这是因为它只实现了不可变的序列协议，可变的序列还必须提供 `__setitem__` 方法。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_card(deck, pos, card):\n",
+    "    deck._cards[pos] = card\n",
+    "    \n",
+    "FrenchDeck.__setitem__ = set_card\n",
+    "shuffle(deck)\n",
+    "print(deck[:5])\n",
+    "print(deck[:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这种技术叫做猴子补丁：在运行是修改类或程序，而不改动源码。缺陷是补丁代码与要打补丁的程序耦合紧密。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 抽象基类（abc）\n",
+    "\n",
+    "- 为什么要有抽象基类？\n",
+    "\n",
+    "    不同类型的对象恰好有某种相似性，比如都有某种相似的方法。然而他们在继承层次上并没有太大联系。\n",
+    "    \n",
+    "- 抽象基类的本质就是几个特殊的方法。 \n",
+    "\n",
+    "- 可以使用抽象基类来检测某个类是否实现了某种协议，而这个类并不需要继承自这个抽象类。  \n",
+    "[`collections.abc`](https://docs.python.org/3/library/collections.abc.html) 和 [`numbers`(https://docs.python.org/3/library/numbers.html) 模块中提供了许多常用的抽象基类以用于这种检测。\n",
+    "\n",
+    "    有了这个功能，我们在自己实现函数时，就不需要非常关心外面传进来的参数的**具体类型**（`isinstance(param, list)`），只需要关注这个参数是否支持我们**需要的协议**（`isinstance(param, abc.Sequence`）以保障正常使用就可以了。\n",
+    "\n",
+    "注意：从 Python 简洁性考虑，最好不要自己创建新的抽象基类，而应尽量考虑使用现有的抽象基类。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,28 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "Can't instantiate abstract class FailedSized with abstract methods __len__",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-fad553cddcd6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNormalSized\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFailedSized\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m       \u001b[0;31m# 协议未实现，Python 会阻止对象实例化\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: Can't instantiate abstract class FailedSized with abstract methods __len__"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 在抽象基类上进行自己的实现\n",
     "from collections import abc\n",
@@ -106,28 +201,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Legal class OK\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "Can't instantiate abstract class IllegalClass with abstract methods some_method",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-e78c72cc5a83>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLegalClass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msome_method\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0mil\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mIllegalClass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m    \u001b[0;31m# Raises\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: Can't instantiate abstract class IllegalClass with abstract methods some_method"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 自己定义一个抽象基类\n",
     "import abc\n",
@@ -157,14 +233,16 @@
    "metadata": {},
    "source": [
     "## 虚拟子类\n",
-    "使用 [`register`](https://docs.python.org/3/library/abc.html#abc.ABCMeta.register) 接口可以将某个类注册为某个 ABC 的“虚拟子类”。支持 `register` 直接调用注册，以及使用 `@register` 装饰器方式注册（其实这俩是一回事）。  \n",
-    "注册后，使用 `isinstance` 以及实例化时，解释器将不会对虚拟子类做任何方法检查。  \n",
+    " - 使用 [`register`](https://docs.python.org/3/library/abc.html#abc.ABCMeta.register) 接口可以将某个类注册为某个 ABC 的“虚拟子类”。支持 `register` 直接调用注册，以及使用 `@register` 装饰器方式注册（其实这俩是一回事）。\n",
+    " \n",
+    "- 注册后，使用 `isinstance` 以及实例化时，解释器将不会对虚拟子类做任何方法检查。  \n",
+    "\n",
     "注意：虚拟子类不是子类，所以虚拟子类不会继承抽象基类的任何方法。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -179,11 +257,11 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-26-d307e70e7794>\", line 31, in <module>\n",
+      "  File \"<ipython-input-2-29894e8d34a0>\", line 31, in <module>\n",
       "    il.some_method()                          # 虚拟子类不是子类，不会从抽象基类上继承任何方法\n",
       "AttributeError: 'IllegalClass' object has no attribute 'some_method'\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-26-d307e70e7794>\", line 36, in <module>\n",
+      "  File \"<ipython-input-2-29894e8d34a0>\", line 36, in <module>\n",
       "    il.another_method()\n",
       "AttributeError: 'IllegalClass' object has no attribute 'another_method'\n"
      ]
@@ -229,6 +307,13 @@
     "except Exception as e:\n",
     "    traceback.print_exc()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -247,9 +332,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
